--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
               width="360"
             />
           </li>
-          <li><img src="/images/iphone.jpg" alt="iphone" width="360" /></li>
+          <li>
+            <img src="./images/iphone.jpg" alt="iphone" width="360" />
+          </li>
         </ul>
       </section>
       <section>
