--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <a href="./">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./">Studio</a></li>
           <li><a href="./">Portfolio</a></li>
@@ -18,7 +18,7 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
           <li><a href="mailto:nfo@devstudio.com">nfo@devstudio.com</a></li>
         </ul>
       </address>
@@ -33,7 +33,7 @@
       </section>
 
       <section>
-        <h2></h2>
+        <h2>empty</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -125,7 +125,7 @@
     </main>
 
     <footer>
-      <h2><a href="/">WebStudio</a></h2>
+      <h2><a href="./index.html">WebStudio</a></h2>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
