--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
           <li><a href="mailto:nfo@devstudio.com">nfo@devstudio.com</a></li>
+          <li><a href="tel:+11(000)1111111">+11(000)111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
         <h1>
-          Effective Solutions <br />
+          Effective Solutions<br />
           for Your Business
         </h1>
         <button type="button">Order Service</button>
@@ -125,7 +125,7 @@
     </main>
 
     <footer>
-      <h2><a href="./index.html">WebStudio</a></h2>
+      <a href="index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
